# cmd3

./: .buildinfo  .gitignore  .project  .travis.yml  AUTHORS  CHANGES  CHANGES.md  CHANGES.rst  ChangeLog  MANIFEST.in  Makefile  Makefile.old  README.md  README.rst  a.py  contact.html  content.html  genindex.html  index.html  manual.html  objects.inv  overview.html  params.json  py-modindex.html  requirements-doc.txt  requirements-test.txt  requirements.in  requirements.txt  requirements_freeze.txt  search.html  searchindex.js  setup.cfg  setup.cfg-bak  setup.py  t.py  todo.html  tox.ini  y.py
_sources/: contact.txt  content.txt  index.txt  manual.txt
_sources/man/: man.txt
_sources/modules/: cmd3.cyberaide.txt  cmd3.plugins.txt  cmd3.txt  modules.txt
_static/: bootstrap-sphinx.css
api/cmd3/: cmd3.etc.cmd3_template.cmd3_template.html  cmd3.etc.cmd3_template.html  cmd3.etc.html  cmd3.html  cmd3.plugins-example.html  cmd3.plugins.html  modules.html
cmd3/: __init__.py  console.py  environment.py  generate.py  setup_management.py  shell.py  version.py  yaml_setup.py
cmd3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cmd3/dynamiccmd/: cyberaide.py
cmd3/etc/: cmd3.yaml
cmd3/examples/: bar.py  fbar.py  foo.py  function_bar.py  metric.py  opt_example.py
cmd3/plugins/: activate.py  bar.py  browser.py  clear.py  edit.py  foo.py  graphviz.py  info.py  load.py  metric.py  opt_example.py  pause.py  py.py  rst.py  script.py  shell_core.py  shell_generate.py  shell_plugins.py  shell_scope.py  template.py  timer.py  yaml_setup.py
deprecated/: __init__.py  old-shell.py  requirements.txt.orig  requirements_freeze.txt
doc/: Makefile
doc/source/: .#manual.rst  conf.py  index.rst  manual.rst
docs/: Makefile
docs/source/: conf.py  contact.rst  index.rst  manual.rst  todo.rst
etc/: cmd3.yaml
etc/cmd3_template/: Makefile  requirements.txt  setup.py.in
fabfile/: __init__.py  clean.py  doc.py  security.py
man/: man.html
modules/: cmd3.cyberaide.html  cmd3.etc.cmd3_template.cmd3_template.html  cmd3.etc.cmd3_template.html  cmd3.etc.html  cmd3.html  cmd3.plugins-example.html  cmd3.plugins.html  modules.html
scripts/: script_one.txt
src/cmd3/: old-shell.py  shell.py
src/cmd3.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_pass.py
(+39 files in other folders)
