[metadata]
version = 0.7.4
name = cmd3
summary = cmd3 - A dynamic CMD shell with plugins
description-file = README.rst
license = Apache License, Version 2.0
author = Gregor von Laszewski
author_email = laszewski@gmail.com
home-page = https://github.com/cloudmesh/cmd3
classifiers =
     Intended Audience :: Developers
     Intended Audience :: Education
     Intended Audience :: Science/Research
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux :: MacOS :: MacOS X
     Programming Language :: Python :: 2.7
     Topic :: Scientific/Engineering
     Topic :: System :: Clustering
     Topic :: System :: Distributed Computing
     Topic :: Software Development :: Libraries :: Python Modules
     Environment :: Console

[files]
packages =
    cmd3

# [global]
# setup-hooks =
#    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    cm = cmd3.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html